Attempted adding time to sidebar. Works on some pages.

--- a/src/unit3/depot_2/app/views/layouts/application.html.erb
+++ b/src/unit3/depot_2/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
         <li><a href="http://www..../news">News</a></li>
         <li><a href="http://www..../contact">Contact</a></li>
       </ul>
+      <p>
+        Last page load <%= @time %>
+      </p>
     </div>
     <div id="main">
 <!-- END_HIGHLIGHT -->
