--- a/src/pets/app/views/animals/_form.html.erb
+++ b/src/pets/app/views/animals/_form.html.erb
@@ -11,23 +11,27 @@
     </div>
   <% end %>
 
+  <!-- -->
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+  <!-- -->
   <div class="field">
     <%= f.label :age %><br>
     <%= f.text_field :age %>
   </div>
+  <!-- -->
   <div class="field">
     <%= f.label :type_of_animal %><br>
     <%= f.text_field :type_of_animal %>
   </div>
+  <!-- -->
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :rows => 6 %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create New Friend" %>
   </div>
 <% end %>
