--- a/src/pets/app/assets/stylesheets/animals.css.scss
+++ b/src/pets/app/assets/stylesheets/animals.css.scss
@@ -13,9 +13,20 @@
     vertical-align: top;
   }
 
-  .list_image {
+  .name {
     width:  60px;
     height: 70px;
+    text-align: right;
+    font-weight: bold;
+  }
+
+  .age {
+    font-style: italic;
+    text-align: center;
+  }
+
+  .type_of_animal {
+    font-family: "Courier New", Courier, monospace;
   }
 
   .list_description {
@@ -51,3 +62,5 @@
   }
 }
 /* END_HIGHLIGHT */
+
+
