Updated with code from book in Chapter 10

--- a/src/unit5/depot/app/views/carts/show.html.erb
+++ b/src/unit5/depot/app/views/carts/show.html.erb
@@ -1,12 +1,13 @@
 <% if notice %>
 <p id="notice"><%= notice %></p>
 <% end %>
-
 <h2>Your Pragmatic Cart</h2>
 <ul>    
   <% @cart.line_items.each do |item| %>
-<!-- START_HIGHLIGHT -->
     <li><%= item.quantity %> &times; <%= item.product.title %></li>
-<!-- END_HIGHLIGHT -->
   <% end %>
 </ul>
+<!-- START_HIGHLIGHT -->
+<%= button_to 'Empty cart', @cart, method: :delete,
+    data: { confirm: 'Are you sure?' } %>
+<!-- END_HIGHLIGHT -->
