--- a/src/unit5/depot/app/views/store/index.html.erb
+++ b/src/unit5/depot/app/views/store/index.html.erb
@@ -13,9 +13,8 @@
         <%= sanitize(product.description) %>
         <div class="price_line">
           <span class="price"><%= number_to_currency(product.price) %></span>
-<!-- START_HIGHLIGHT -->
-          <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
-<!-- END_HIGHLIGHT -->
+          <%= button_to 'Add to Cart', line_items_path(product_id: product),
+            remote: true %>
         </div>
       </div>
     <% end %>
